<resources>
    <string name="app_name">Beasiswa Pelajar</string>
    <string name="beasiswapelajar">BEASISWA PELAJAR</string>
    <string name="login">LOGIN</string>
    <string name="siswa">SISWA</string>
    <string name="donatur">DONATUR</string>
    <string name="admin">ADMIN</string>
    <string name="masuk">Masuk</string>
    <string name="lupapassword"><u><font color="#1C0DF6"></font>Lupa Password?</u></string>
    <string name="tidakpunyaakun">Tidak punya akun? </string>
    <string name="buatakun"><u><font color="#1C0DF6"></font> Buat akun</u></string>
    <string name="daftarakun">DAFTAR AKUN</string>
    <string name="sudahpunyaakun">Sudah punya akun? </string>
    <string name="masukakun"><u><font color="#1C0DF6"></font> Masuk</u></string>
    <string name="menu_beasiswa">Beasiswa</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_applied">Applied</string>
    <string name="menu_profile">Profile</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias aspernatur beatae deleniti dolor dolore doloremque illum, molestias necessitatibus omnis pariatur placeat quos, ratione repudiandae saepe sapiente tempora velit veritatis?</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
