<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".DaftarPelajar">
        <TextView
            android:id="@+id/TV1"
            android:layout_marginTop="41dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beasiswapelajar"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/TV2"
            android:layout_below="@id/TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftarakun"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/TV2">
            <TextView
                android:id="@+id/pelajar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siswa"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/donatur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donatur"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/namaSiswa"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:hint="Nama Lengkap"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:layout_below="@id/author"
            android:padding="10dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/universitas"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="17dp"
            android:inputType="text"
            android:hint="Alamat"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:layout_below="@id/namaSiswa"
            android:padding="10dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/emailSiswa"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="17dp"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:layout_below="@id/universitas"
            android:padding="10dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/password1Siswa"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="Password"
            android:layout_marginTop="17dp"
            android:layout_below="@id/emailSiswa"
            android:padding="10dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/password2Siswa"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="Ulangi Password"
            android:layout_marginTop="17dp"
            android:layout_below="@id/password1Siswa"
            android:padding="10dp"
            android:background="@drawable/roundedcorner"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/loginSiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password2Siswa"
            android:ems="10"
            android:layout_marginTop="29dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/masuk"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/lupapassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginSiswa"
            android:text="@string/lupapassword"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_marginTop="30dp"
            android:id="@+id/line"
            android:layout_below="@+id/lupapassword"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudahpunyaakun"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/masukakun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masukakun"
                android:textSize="15sp"
                android:paddingBottom="20dp"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>